k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    app: products
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
